Fixed background image to body, not stargpage container to allow for overflow-y

--- a/popup/homepage.css
+++ b/popup/homepage.css
@@ -33,8 +33,6 @@
   text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
 }
 
-
-
 .favourite-container,
 .new-favourite-container,
 .preview-favourite-container,
@@ -162,16 +160,6 @@
 .single-image-zone {
   height: 150px;
   border: 1px solid black;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.startpage-container {
-  padding-top: 30px;
-  position: fixed;
-  z-index: -99;
-  width: 100%;
-  height: 100%;
   background-size: cover;
   background-position: center;
 }
