--- a/popup/startpage.css
+++ b/popup/startpage.css
@@ -23,7 +23,10 @@ body {
   margin-left: 0px;
   margin-right: 0px;
   margin-top: 0px;
+  background-size: cover;
+  background-position: center;
 }
+
 .outer-wrapper {
   overflow: auto;
   width: 100%;
